<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutConstraints"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HikeForm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/svHikeForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHikeForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="111dp"
            android:layout_marginEnd="156dp"
            android:text="@string/hike_form"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/description_btnBack"
            android:onClick="toHikeHomepage"
            android:src="@drawable/icon_back"
            app:layout_constraintBottom_toBottomOf="@+id/tvHikeForm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvHikeForm"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvHikeFormDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hike_form_desc"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHikeForm" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/svHikeForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutHikeForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_white_rectangle"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/hike_name"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editHikeName"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:ems="11"
                        android:hint="@string/hint_hike_name"
                        android:inputType="text"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/location"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editLocation"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:ems="11"
                        android:hint="@string/hint_location"
                        android:inputType="text"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/date"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editDate"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:ems="11"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/hint_date"
                        android:inputType="text"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvParking"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/park"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rGroupParking"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioParkYes"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:text="@string/park_yes_radio" />

                        <RadioButton
                            android:id="@+id/radioParkNo"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:text="@string/park_no_radio" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvLength"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/length"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editLength"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:ems="11"
                        android:hint="@string/hint_length"
                        android:inputType="number"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvType"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/type"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDifficulty"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/difficulty"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rGroupDifficulty"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioEasy"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:text="@string/difficulty_easy_radio" />

                        <RadioButton
                            android:id="@+id/radioNormal"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:text="@string/difficulty_normal_radio" />

                        <RadioButton
                            android:id="@+id/radioHard"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:text="@string/difficulty_hard_radio" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvEContact"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/e_contact"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editEContact"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:ems="11"
                        android:hint="@string/hint_e_contact"
                        android:inputType="phone"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/description"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editDescription"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:ems="11"
                        android:hint="@string/hint_description"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:selectAllOnFocus="true"
                        android:singleLine="false"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/button_save" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menuBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toTopOf="@id/menuBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>